# Vitruvius

./: desktop.ini
Tools/xs-check-main/: .gitattributes  .gitignore  Cargo.toml  README.md
Tools/xs-check-main/.github/workflows/: publish.yml
Tools/xs-check-main/maths/: mkdocs.yml
Tools/xs-check-main/maths/docs/: index.md
Tools/xs-check-main/maths/docs/code_gen/: pa.md  xs_bc.md  xs_mm.md
Tools/xs-check-main/maths/docs/dynamic/: xs_op_sem.md
Tools/xs-check-main/maths/docs/parsing/: xs_grammar.md  xs_keywords.md  xs_tokens.md
Tools/xs-check-main/maths/docs/static/: xs_liveness.md  xs_sign.md  xs_type_chk.md  xs_type_inf.md
Tools/xs-check-main/maths/docs/xs_vm/: xs_rt.md
Tools/xs-check-main/test_xs/: test.xs  test2.xs  xslc_core.xs
Tools/xs-check-main/xsc-cli/: Cargo.toml  build.rs
Tools/xs-check-main/xsc-cli/src/: cli.rs  fmt.rs  main.rs
Tools/xs-check-main/xsc-cli/src/fmt/: msg_fmt.rs  print_errs.rs
Tools/xs-check-main/xsc-core/: Cargo.toml
Tools/xs-check-main/xsc-core/src/: doxygen.rs  lib.rs  main.rs  static.rs  utils.rs
Tools/xs-check-main/xsc-core/src/parsing/: ast.rs  lexer.rs  parser.rs  span.rs
Tools/xs-check-main/xsc-core/src/parsing/ast/: ast.rs  comment.rs  expr.rs  identifier.rs  literal.rs  param.rs  type_.rs
Tools/xs-check-main/xsc-core/src/parsing/lexer/: comment.rs  keyword.rs  literal.rs  operator.rs  punctuation.rs  token.rs
Tools/xs-check-main/xsc-core/src/parsing/parser/: expression.rs  parser_input.rs  statement.rs
Tools/xs-check-main/xsc-core/src/static/: info.rs  type_check.rs
Tools/xs-check-main/xsc-core/src/static/info/: error.rs  fn_info.rs  gen_errs.rs  id_info.rs  modifiers.rs  parse_error.rs  src_loc.rs  type_env.rs  types.rs  xs_error.rs
Tools/xs-check-main/xsc-lsp/: Cargo.toml
Tools/xs-check-main/xsc-lsp/src/: backend.rs  config.rs  fmt.rs  main.rs  semantic_tokens.rs  utils.rs
Tools/xs-check-main/xsc-lsp/src/backend/: backend.rs  backend_lsp.rs
Tools/xs-check-main/xsc-lsp/src/config/: config.rs  ext_config.rs  flavour.rs
Tools/xs-check-main/xsc-lsp/src/fmt/: errs_to_diags.rs  msg_fmt.rs  pos_info.rs
Tools/xs-check-main/xsc-lsp/src/semantic_tokens/: gen_tokens.rs  semantic_info.rs  token_legend.rs  xs_token.rs
(+879 files in other folders)
